--- a/BarCode/res/layout/activity_bar_code.xml
+++ b/BarCode/res/layout/activity_bar_code.xml
@@ -9,6 +9,7 @@
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:text="@string/hello_world"
-        tools:context=".BarCode" />
+        tools:context=".BarCode"
+        android:id="@+id/HelloWorld" />
 
 </RelativeLayout>
