--- a/BarCode/res/layout/activity_bar_code.xml
+++ b/BarCode/res/layout/activity_bar_code.xml
@@ -4,12 +4,21 @@
     android:layout_height="match_parent" >
 
     <TextView
+        android:id="@+id/HelloWorld"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:text="@string/hello_world"
-        tools:context=".BarCode"
-        android:id="@+id/HelloWorld" />
+        android:text="SERIALE!!"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        tools:context=".BarCode" />
+
+    <Button
+        android:id="@+id/button1"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/HelloWorld"
+        android:text="SCANNA!!" />
 
 </RelativeLayout>
